--- a/src/main/resources/assets/overthehorizons/lang/en_us.json
+++ b/src/main/resources/assets/overthehorizons/lang/en_us.json
@@ -11,9 +11,9 @@
 	"block.overthehorizons.dried_oak_leaves": "Dried Oak Leaves",
 	"block.overthehorizons.dried_dark_oak_leaves": "Dried Dark Oak Leaves",
 
-	"particle.overthehorizons.dark_oak_leaf_particle": "Dark Oak Leaf",
-	"particle.overthehorizons.oak_leaf_particle": "Oak Leaf",
-	"particle.overthehorizons.birch_leaf_particle": "Birch Leaf",
+	"particle.overthehorizons.brown_leaf_particle": "Brown Leaf",
+	"particle.overthehorizons.orange_leaf_particle": "Orange Leaf",
+	"particle.overthehorizons.yellow_leaf_particle": "Yellow Leaf",
 
 
 	"itemGroup.overthehorizons": "Over The Horizons"
