Added Fallen Leaves

--- a/src/main/resources/assets/overthehorizons/lang/en_us.json
+++ b/src/main/resources/assets/overthehorizons/lang/en_us.json
@@ -10,6 +10,7 @@
 	"block.overthehorizons.dried_birch_leaves": "Dried Birch Leaves",
 	"block.overthehorizons.dried_oak_leaves": "Dried Oak Leaves",
 	"block.overthehorizons.dried_dark_oak_leaves": "Dried Dark Oak Leaves",
+	"block.overthehorizons.fallen_leaves": "Fallen Leaves",
 
 	"particle.overthehorizons.brown_leaf_particle": "Brown Leaf",
 	"particle.overthehorizons.orange_leaf_particle": "Orange Leaf",
